statistic page added
